# RAGUdemy

./: README.md  index.xml  pyproject.toml  requirements.txt  test.txt
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb
0-DataIngestParsing/data/text_files/: python_intro.txt
